EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/07/2009
Angelox: Bots: Added command '#bot charm' (requires enchanter in group). Charm does not work while Chanter has pet so I added the grouped Chanters pet to '#bot group remove' (remove the pet before #bot charm).
Angelox: Bots: '#bot sow wolf' should not affect pets anymore.
Derision: Chatserver: Added some extra syntax error checking to prevent crashes.
Angelox: Bots: Added Wizard class and level check to the '#bot evac' command
Angelox: Bots: Added '#bot invis see' for see invisible
Required SQL: 
DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=80;
Congdar: Fix NPC::RemoveItem(uint16 item_id) to uint32 to work with items that have id's larger than 65535. '#npcloot remove [itemid]' will now successfully remove items with larger id's from npc loot.
Congdar: Bots: Visible gear will now show correctly when trading/equipping bots.

==01/05/2009
Angelox: Bots: Re-did command '#bot cure'- one of three Curer class (Cleric is primary), will ask what you want if you use '#bot cure' alone.

==01/04/2009
Angelox: Bots: Added command '#bot endureb' (enduring breath).
Angelox: Bots: Hopefully fixed bug where other sowers replaced primary sower (Druid).

==01/03/2009
Angelox: Bots: remade/improved commands '#bot levitate'and '#bot invis'

==01/02/2009
Congdar: Bots: update command #bot inventory list   Now shows gear as item links.  Removed (Bot) as last name during bot creation.
Optional SQL: update npc_types set lastname='' where isbot=1;

==01/01/2009
Angelox: Bots: Added command '#bot sow' (Druid has options) 
Angelox: Bots: Added command '#bot levitate'.
Angelox: Bots: Added command '#bot invis' - (has options).

Required SQL: utils/sql/svn/250_bot_spell_update.sql

Angelox: Bots: Added command '#bot resist' (has options, don't use optional sql if you don't want).
