@@ -14,5 +14,10 @@ DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=71
 DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=2517;
 DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=2894;
 DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=80;
+DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=261;
+DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=255;
+DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=894;
+DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=2739;
+DELETE FROM npc_spells_entries where (npc_spells_id >=701 and npc_spells_id <=712) AND spellid=86;
 
 INSERT INTO npc_spells_entries SET npc_spells_id=707, spellid=425, type=8, minlevel=20, maxlevel=255, manacost=-1, recast_delay=-1, priority=0;
